--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ button {
   <input type="text" id="type" placeholder="Ex: roman, album, BD...">
   <label>Genre</label>
   <input type="text" id="genre" placeholder="Ex: Aventure, policier, guerre, biographie, Science-fiction...">
-  <label>Résumé (1-2 phrases)</label>
+  <label>Résumé (1-2 phrases en commençant par C'est l'histoire de...)</label>
   <textarea id="resume"></textarea>
   <label>Personnage principal</label>
   <input type="text" id="personnage">
@@ -56,7 +56,7 @@ button {
   <label>Choix du livre</label>
   <input type="text" id="choix" placeholder="Ex: couverture, résumé, conseillé par...">
   <label>Émotion ressentie</label>
-  <input type="text" id="emotion" placeholder="Ex: joie, tristesse, peur, colère...">
+  <input type="text" id="emotion" placeholder="Ex: la joie, la tristesse, la peur, la colère...">
   <label>Note (étoiles)</label>
   <div class="stars" id="stars">
     <span data-value="1">★</span>
@@ -70,9 +70,9 @@ button {
   <label>Avis sur l’écriture</label>
   <input type="text" id="ecriture">
   <label>Objectif du livre :</label>
-  <input type="text" id="objectif">
+  <input type="text" id="objectif" placeholder="l'objectif est de...">
   <label>Recommandation</label>
-  <input type="text" id="recommandation">
+  <input type="text" id="recommandation"placeholder="Je le recommande à ceux qui...">
 
   <h2>III. Personnalisation</h2>
   <label>Avis libre / conclusion</label>
@@ -117,16 +117,15 @@ function genererTexte() {
 
   let texte = `J'ai lu "${titre}" écrit par ${auteur} et publié par ${editeur}. `;
   texte += `C'est un ${type} appartenant au genre ${genre}. `;
-  texte += `Voici un bref résumé : ${resume} `;
-  texte += `Le personnage principal est ${personnage}.\n\n`;
+  texte += `C'est l'histoire de ${resume} `;
+  texte += `Le personnage principal s'appelle ${personnage}.\n\n`;
 
   texte += `J'ai choisi ce livre car ${choix}. `;
   texte += `L’histoire est ${qualificatif} et l'écriture est ${ecriture}. `;
-  texte += `L'objectif de ce livre est ${objectif}. `;
-  texte += `Pendant ma lecture, j'ai ressenti ${emotion}. `;
+  texte += `L'objectif de ce livre est de ${objectif}. `;
+  texte += `Pendant ma lecture, j'ai ressenti de ${emotion}. `;
+  texte += `C'est un livre que je le recommande à ceux qui ${recommandation}.\n\n`;
   texte += `Je lui attribue la note de ${note} étoile(s). `;
-  texte += `Je le recommande à ${recommandation}.\n\n`;
-
   texte += `${avisLibre}`;
 
   document.getElementById('result').innerText = texte;
