--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ button {
   <label>Qualificatif de l’histoire</label>
   <input type="text" id="qualificatif" placeholder="captivante, drôle, poétique...">
   <label>Avis sur l’écriture</label>
-  <input type="text" id="ecriture" placeholder="fluide, vive, écrit à la première personne...>
+  <input type="text" id="ecriture" placeholder="fluide, vive, écrit à la première personne...">
   <label>Objectif du livre :</label>
   <input type="text" id="objectif" placeholder="l'objectif est de...">
   <label>Recommandation</label>
