--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ button {
   </div>
   <label>Qualificatif de l’histoire</label>
   <input type="text" id="qualificatif" placeholder="captivante, drôle, poétique...">
-  <label>Avis sur l’écriture</label>
+  <label>Je trouve que l'écriture est</label>
   <input type="text" id="ecriture" placeholder="fluide, vive, écrit à la première personne...">
   <label>Objectif du livre :</label>
   <input type="text" id="objectif" placeholder="l'objectif est de...">
