--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ button {
   <input type="text" id="personnage">
 
   <h2>II. Avis argumenté</h2>
-  <label>Choix du livre</label>
-  <input type="text" id="choix" placeholder="Ex: parce que...">
+  <label>J'ai choisi ce livre parce que</label>
+  <input type="text" id="choix">
   <label>Émotion ressentie</label>
   <input type="text" id="emotion" placeholder="Ex: la joie, la tristesse, la peur, la colère...">
   <label>Note (étoiles)</label>
@@ -120,7 +120,7 @@ function genererTexte() {
   texte += `C'est l'histoire de ${resume} `;
   texte += `Le personnage principal s'appelle ${personnage}.\n\n`;
 
-  texte += `J'ai choisi ce livre ${choix}. `;
+  texte += `J'ai choisi ce livre parce que ${choix}. `;
   texte += `L’histoire est ${qualificatif} et l'écriture est ${ecriture}. `;
   texte += `L'objectif de ce livre est de ${objectif}. `;
   texte += `Pendant ma lecture, j'ai ressenti de ${emotion}. `;
