--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ button {
   <input type="text" id="type" placeholder="Ex: roman, album, BD...">
   <label>Genre</label>
   <input type="text" id="genre" placeholder="Ex: Aventure, policier, guerre, biographie, Science-fiction...">
-  <label>Résumé (1-2 phrases : C'est l'histoire de...)</label>
+  <label>Résumé (1-2 phrases : C'est l'histoire...)</label>
   <textarea id="resume"></textarea>
   <label>Nom personnage principal et descriptif</label>
   <input type="text" id="personnage">
@@ -65,14 +65,14 @@ button {
     <span data-value="4">★</span>
     <span data-value="5">★</span>
   </div>
-  <label>Qualificatif de l’histoire</label>
+  <label>L'histoire est...</label>
   <input type="text" id="qualificatif" placeholder="captivante, drôle, poétique...">
-  <label>Je trouve que l'écriture est</label>
+  <label>Je trouve que l'écriture est...</label>
   <input type="text" id="ecriture" placeholder="fluide, vive, écrit à la première personne...">
-  <label>Objectif du livre :</label>
-  <input type="text" id="objectif" placeholder="l'objectif est de...">
-  <label>Recommandation</label>
-  <input type="text" id="recommandation"placeholder="Je le recommande à ceux qui...">
+  <label>L'objectif du livre est de :</label>
+  <input type="text" id="objectif">
+  <label>Je recommande ce livre à...</label>
+  <input type="text" id="recommandation">
 
   <h2>III. Personnalisation</h2>
   <label>Avis libre / conclusion</label>
