--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
@@ -47,9 +47,9 @@ button {
   <input type="text" id="type" placeholder="Ex: roman, album, BD...">
   <label>Genre</label>
   <input type="text" id="genre" placeholder="Ex: Aventure, policier, guerre, biographie, Science-fiction...">
-  <label>Résumé (1-2 phrases : C'est l'histoire...)</label>
+  <label>Résumé en 1-2 phrases avec QQCOQP : C'est l'histoire...)</label>
   <textarea id="resume"></textarea>
-  <label>Nom personnage principal et descriptif</label>
+  <label>Nom du personnage principal.1-2 phrases pour le décrire</label>
   <input type="text" id="personnage">
 
   <h2>II. Avis argumenté</h2>
@@ -117,7 +117,7 @@ function genererTexte() {
 
   let texte = `J'ai lu "${titre}" écrit par ${auteur} et publié par ${editeur}. `;
   texte += `C'est un ${type} appartenant au genre ${genre}. `;
-  texte += `C'est l'histoire de ${resume} `;
+  texte += ` ${resume} `;
   texte += `Le personnage principal s'appelle ${personnage}.\n\n`;
 
   texte += `J'ai choisi ce livre parce que ${choix}. `;
