--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@ button {
   <input type="text" id="type" placeholder="Ex: roman, album, BD...">
   <label>Genre</label>
   <input type="text" id="genre" placeholder="Ex: Aventure, policier, guerre, biographie, Science-fiction...">
-  <label>Résumé en 1-2 phrases avec QQCOQP : C'est l'histoire...)</label>
+  <label>Résumé en 1-2 phrases avec QQCOQP</label>
   <textarea id="resume"></textarea>
   <label>Nom du personnage principal.1-2 phrases pour le décrire</label>
   <input type="text" id="personnage">
 
   <h2>II. Avis argumenté</h2>
-  <label>J'ai choisi ce livre parce que</label>
+  <label>J'ai choisi ce livre parce que...</label>
   <input type="text" id="choix">
   <label>Émotion ressentie</label>
   <input type="text" id="emotion" placeholder="Ex: la joie, la tristesse, la peur, la colère...">
@@ -69,7 +69,7 @@ button {
   <input type="text" id="qualificatif" placeholder="captivante, drôle, poétique...">
   <label>Je trouve que l'écriture est...</label>
   <input type="text" id="ecriture" placeholder="fluide, vive, écrit à la première personne...">
-  <label>L'objectif du livre est de :</label>
+  <label>L'objectif du livre est de...</label>
   <input type="text" id="objectif">
   <label>Je recommande ce livre à...</label>
   <input type="text" id="recommandation">
