--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ button {
   <input type="text" id="editeur">
   <label>Type de livre</label>
   <input type="text" id="type" placeholder="Ex: roman, album, BD...">
-  <label>Genre</label>
-  <input type="text" id="genre" placeholder="Ex: Aventure, policier, guerre, biographie, Science-fiction...">
+  <label>Thème principal</label>
+  <input type="text" id="thème" placeholder="Ex: l'aventure, le policier, la guerre, le harcèlement, la Science-fiction...">
   <label>Résumé en 1-2 phrases avec QQCOQP</label>
   <textarea id="resume"></textarea>
   <label>Nom du personnage principal.1-2 phrases pour le décrire</label>
@@ -75,7 +75,7 @@ button {
   <input type="text" id="recommandation">
 
   <h2>III. Personnalisation</h2>
-  <label>Avis libre / conclusion</label>
+  <label>Tu peux en dire plus</label>
   <textarea id="avisLibre"></textarea>
 
   <button onclick="genererTexte()">Générer</button>
@@ -116,7 +116,7 @@ function genererTexte() {
   const avisLibre = document.getElementById('avisLibre').value.trim();
 
   let texte = `J'ai lu "${titre}" écrit par ${auteur} et publié par ${editeur}. `;
-  texte += `C'est un ${type} appartenant au genre ${genre}. `;
+  texte += `C'est un ${type} dont le thème principal est ${genre}. `;
   texte += ` ${resume} `;
   texte += `Le personnage principal s'appelle ${personnage}.\n\n`;
 
