--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ function genererTexte() {
   texte += `L’histoire est ${qualificatif} et l'écriture est ${ecriture}. `;
   texte += `L'objectif de ce livre est de ${objectif}. `;
   texte += `Pendant ma lecture, j'ai ressenti de ${emotion}. `;
-  texte += `C'est un livre que je le recommande à ceux qui ${recommandation}.\n\n`;
+  texte += `C'est un livre que je recommande à ${recommandation}.\n\n`;
   texte += `Je lui attribue la note de ${note} étoile(s). `;
   texte += `${avisLibre}`;
 
